source/k8s/basket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basket
  template:
    metadata:
      labels:
        app: basket
    spec:
      containers:
        - name: basket
          image: basket-service:latest
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: basket-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: basket
  ports:
    - name: basket
      protocol: TCP
      port: 8083
      targetPort: 8083
