source/k8s/customer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: customer-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: customer-srv
spec:
  selector:
    app: customer
  ports:
    - name: customer-port
      protocol: TCP
      port: 8082
      targetPort: 8082
