source/k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend-service:latest
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: frontend-http
      protocol: TCP
      port: 8080
      targetPort: 8888
