source/k8s/inventory-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
    - name: inventory
      protocol: TCP
      port: 8086
      targetPort: 8086
