source/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  rules:
    - host: ecommerce.local
      http:
        paths:
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: catalog-srv
                port:
                  number: 8081
          - path: /api/members
            pathType: Prefix
            backend:
              service:
                name: customer-srv
                port:
                  number: 8082
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-clusterip-srv
                port:
                  number: 8084
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 8085
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment-clusterip-srv
                port:
                  number: 8080
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: catalog-srv
                port:
                  number: 8081
          - path: /api/baskets
            pathType: Prefix
            backend:
              service:
                name: basket-clusterip-srv
                port:
                  number: 8083
          - path: /api/stocks
            pathType: Prefix
            backend:
              service:
                name: inventory-clusterip-srv
                port:
                  number: 8086
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  number: 8080
